--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
 <header>
 
     <div style="text-align: center">
-    <a href="/"><h2 class="eng" style="display:inline-block">2023 PKNU Honors Life Academy</h2></a>
+    <a href="https://dy102.github.io/lifeacademy/"><h2 class="eng" style="display:inline-block">2023 PKNU Honors Life Academy</h2></a>
     <a href="https://instagram.com/pknu_lifeacademy?igshid=YmMyMTA2M2Y=">
         <img src="https://cdn-icons-png.flaticon.com/128/174/174855.png" alt="instagram"  class="instagram"  style="display:inline-block"></a>
-    <a href="/login"><h5 class="log_in" style="display: inline-block; color: #838383;">log in</h5></a>
+    <a href="https://dy102.github.io/lifeacaemy_login/"><h5 class="log_in" style="display: inline-block; color: #838383;">log in</h5></a>
     </div>
 
 </header>
